[package]
name = "gb-rw-host"
version = "0.2.0"
authors = ["Dhole <dhole@openmailbox.org>"]
edition = "2018"

[dependencies]
serial = "0.4"
clap = "2.26.0"
bufstream = "0.1.3"
num = "0.1.40"
enum_primitive = "*"
time = "0.1"
zip = "0.2.6"
pbr = "1.0.1"
paste = "0.1.7"
log = "0.4"
env_logger = "0.7.1"

[dependencies.urpc]
path = "/home/dev/git/urpc"

[dependencies.serde]
version = "1.0.102"
# default-features = false

